gcp-iac/main.tf
provider "google" {
  project = var.project_id
  region  = var.region
  zone    = var.zone
}

resource "google_compute_network" "vpc_network" {
  name = "private-network"
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "private_subnet" {
  name          = "private-subnet"
  ip_cidr_range = "192.168.56.0/24"
  region        = var.region
  network       = google_compute_network.vpc_network.id
}

resource "google_compute_firewall" "allow_internal" {
  name    = "allow-internal"
  network = google_compute_network.vpc_network.name

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["0-65535"]
  }

  allow {
    protocol = "udp"
    ports    = ["0-65535"]
  }

  source_ranges = ["192.168.56.0/24"]
}

# SSH
resource "google_compute_firewall" "allow_ssh" {
  name    = "allow-ssh"
  network = google_compute_network.vpc_network.name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["allow-ssh"]
}

# HTTP (frontend)
resource "google_compute_firewall" "allow_http" {
  name    = "allow-http"
  network = google_compute_network.vpc_network.name

  allow {
    protocol = "tcp"
    ports    = ["8080"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["allow-http"]
}

# Backend – port 5005 (np. Flask)
resource "google_compute_firewall" "allow_backend" {
  name    = "allow-backend"
  network = google_compute_network.vpc_network.name

  allow {
    protocol = "tcp"
    ports    = ["5005"]
  }

  source_ranges = ["192.168.56.0/24"]
  target_tags   = ["allow-backend"]
}

# DB – port 3306 (MySQL)
resource "google_compute_firewall" "allow_db" {
  name    = "allow-db"
  network = google_compute_network.vpc_network.name

  allow {
    protocol = "tcp"
    ports    = ["3306"]
  }
    source_ranges = ["192.168.56.0/24"]
  target_tags   = ["allow-db"]
}

resource "google_compute_router" "nat_router" {
  name    = "nat-router"
  region  = var.region
  network = google_compute_network.vpc_network.name
}

resource "google_compute_router_nat" "nat_gateway" {
  name                               = "nat-config"
  router                             = google_compute_router.nat_router.name
  region                             = var.region
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"
}

resource "google_compute_instance" "vm" {
  count        = 4
  name         = var.vm_names[count.index]
  machine_type = var.machine_type
  zone         = var.zone

  boot_disk {
    initialize_params {
      image = "ubuntu-os-cloud/ubuntu-minimal-2204-lts"
    }
  }

  network_interface {
    subnetwork = google_compute_subnetwork.private_subnet.id
    network_ip = var.vm_internal_ips[count.index]

    dynamic "access_config" {
      for_each = var.vm_names[count.index] == "frontend" || var.vm_names[count.index] == "ansible" ? [1] : []
      content {}
    }
  }

  # tags = var.vm_names[count.index] == "frontend" || var.vm_names[count.index] == "ansible" ? ["allow-ssh"] : []
  tags = lookup(var.vm_tags, var.vm_names[count.index], [])

  # metadata = var.vm_names[count.index] == "ansible" ? {
  #  startup-script = file("${path.module}/scripts/setup-ansible.sh")
  # } : {}

  metadata = var.vm_names[count.index] != "ansible" ? {
    ssh-keys = "kulka:${file(var.ansible_ssh_key_pub_path)}"
  } : {}
}
